--- a/package.json
+++ b/package.json
@@ -7,15 +7,26 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@fortawesome/vue-fontawesome": "^3.0.3",
+    "axios": "^1.5.0",
+    "bootstrap": "^5.3.1",
     "core-js": "^3.8.3",
+    "crypto-js": "^4.1.1",
+    "imask": "^7.4.0",
+    "secure-ls": "^1.2.6",
     "vue": "^3.2.13",
+    "vue-i18n": "^9.9.1",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "~5.0.0"
+    "@vue/cli-service": "~5.0.0",
+    "sass": "^1.71.1",
+    "sass-loader": "^14.1.1",
+    "webpack": "^5.90.3"
   }
 }
