--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@j-t-mcc/vue3-chartjs": "^1.3.0",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
+    "chart.js": "^3.7.0",
     "core-js": "^3.8.3",
     "crypto-js": "^4.1.1",
     "imask": "^7.4.0",
