--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@j-t-mcc/vue3-chartjs": "^1.3.0",
+    "@popperjs/core": "^2.11.8",
+    "@stomp/stompjs": "^7.0.0",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "chart.js": "^3.7.0",
@@ -16,11 +18,13 @@
     "crypto-js": "^4.1.1",
     "imask": "^7.4.0",
     "secure-ls": "^1.2.6",
+    "sockjs-client": "^1.6.1",
     "vue": "^3.2.13",
     "vue-i18n": "^9.9.1",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.2",
-    "vuex-persistedstate": "^4.1.0"
+    "vuex-persistedstate": "^4.1.0",
+    "webstomp-client": "^1.2.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
